--- a/rtl/counter_all_apb_reg_firefox_public.htm
+++ b/rtl/counter_all_apb_reg_firefox_public.htm
@@ -1556,7 +1556,7 @@
 <td width="7%"><font face="Arial" size="2">[15:8]</font></td>
 <td width="10%"><font face="Arial" size="2">0x 0</font></td>
 <td width="11%"><font face="Arial" size="2">read-write</font></td>
-<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">counter 0 clock select and inverse enable. &nbsp;</p></font></td></tr>
+<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">counter 0 clock select and inverse enable. & clock enable signal.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">[11:8]-> clock select;&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">[12:12]-> clock inverser enable,high active;&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">[13:13]-> clock enable,high active;&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
 </table>
 <hr>
 <h3 align="left"><font size="4" face="Arial"><a name="counter_all_apb_reg_soft_trigger_ctrl_c0"></a><b>soft_trigger_ctrl_c0</b></font></h3>
