--- a/rtl/counter_all_apb_reg_firefox_public.htm
+++ b/rtl/counter_all_apb_reg_firefox_public.htm
@@ -2140,7 +2140,7 @@
 <td width="59%" align="center"><font face="Arial" size="2"><b>Description</b></font></td>
 </tr>
 <tr>
-<td width="13%"><font face="Arial" size="2">o_capture_reg_status_c0</font></td>
+<td width="13%"><font face="Arial" size="2">i_capture_reg_status_c0</font></td>
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">N/A</font></td>
 <td width="11%"><font face="Arial" size="2">read-only</font></td>
@@ -2183,7 +2183,7 @@
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">0x 0</font></td>
 <td width="11%"><font face="Arial" size="2">read-write</font></td>
-<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as o_capture_reg_status_c0.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
+<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as i_capture_reg_status_c0.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
 </table>
 <hr>
 <h3 align="left"><font size="4" face="Arial"><a name="counter_all_apb_reg_capture_reg_a0_c0"></a><b>capture_reg_a0_c0</b></font></h3>
@@ -3571,7 +3571,7 @@
 <td width="59%" align="center"><font face="Arial" size="2"><b>Description</b></font></td>
 </tr>
 <tr>
-<td width="13%"><font face="Arial" size="2">o_capture_reg_status_c1</font></td>
+<td width="13%"><font face="Arial" size="2">i_capture_reg_status_c1</font></td>
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">N/A</font></td>
 <td width="11%"><font face="Arial" size="2">read-only</font></td>
@@ -3614,7 +3614,7 @@
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">0x 0</font></td>
 <td width="11%"><font face="Arial" size="2">read-write</font></td>
-<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as o_capture_reg_status_c1.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
+<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as i_capture_reg_status_c1.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
 </table>
 <hr>
 <h3 align="left"><font size="4" face="Arial"><a name="counter_all_apb_reg_capture_reg_a0_c1"></a><b>capture_reg_a0_c1</b></font></h3>
@@ -5002,7 +5002,7 @@
 <td width="59%" align="center"><font face="Arial" size="2"><b>Description</b></font></td>
 </tr>
 <tr>
-<td width="13%"><font face="Arial" size="2">o_capture_reg_status_c2</font></td>
+<td width="13%"><font face="Arial" size="2">i_capture_reg_status_c2</font></td>
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">N/A</font></td>
 <td width="11%"><font face="Arial" size="2">read-only</font></td>
@@ -5045,7 +5045,7 @@
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">0x 0</font></td>
 <td width="11%"><font face="Arial" size="2">read-write</font></td>
-<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as o_capture_reg_status_c2.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
+<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as i_capture_reg_status_c2.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
 </table>
 <hr>
 <h3 align="left"><font size="4" face="Arial"><a name="counter_all_apb_reg_capture_reg_a0_c2"></a><b>capture_reg_a0_c2</b></font></h3>
@@ -6433,7 +6433,7 @@
 <td width="59%" align="center"><font face="Arial" size="2"><b>Description</b></font></td>
 </tr>
 <tr>
-<td width="13%"><font face="Arial" size="2">o_capture_reg_status_c3</font></td>
+<td width="13%"><font face="Arial" size="2">i_capture_reg_status_c3</font></td>
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">N/A</font></td>
 <td width="11%"><font face="Arial" size="2">read-only</font></td>
@@ -6476,7 +6476,7 @@
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">0x 0</font></td>
 <td width="11%"><font face="Arial" size="2">read-write</font></td>
-<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as o_capture_reg_status_c3.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
+<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as i_capture_reg_status_c3.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
 </table>
 <hr>
 <h3 align="left"><font size="4" face="Arial"><a name="counter_all_apb_reg_capture_reg_a0_c3"></a><b>capture_reg_a0_c3</b></font></h3>
