--- a/rtl/counter_all_apb_reg_ie_public.htm
+++ b/rtl/counter_all_apb_reg_ie_public.htm
@@ -5294,7 +5294,7 @@
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium">&nbsp;</td>
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
-<td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium"><font face="Arial" size="2">o_capture_reg_status_c0</font></td>
+<td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium"><font face="Arial" size="2">i_capture_reg_status_c0</font></td>
 </tr>
 <tr>
 <td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-bottom-style: none; border-bottom-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
@@ -5319,7 +5319,7 @@
 <td width="59%" align="center"><font face="Arial" size="2"><b>Description</b></font></td>
 </tr>
 <tr>
-<td width="13%"><font face="Arial" size="2">o_capture_reg_status_c0</font></td>
+<td width="13%"><font face="Arial" size="2">i_capture_reg_status_c0</font></td>
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">N/A</font></td>
 <td width="11%"><font face="Arial" size="2">read-only</font></td>
@@ -5418,7 +5418,7 @@
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">0x 0</font></td>
 <td width="11%"><font face="Arial" size="2">read-write</font></td>
-<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as o_capture_reg_status_c0.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
+<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as i_capture_reg_status_c0.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
 </table>
 <hr>
 <h3 align="left"><font size="4" face="Arial"><a name="counter_all_apb_reg_capture_reg_a0_c0"></a><b>capture_reg_a0_c0</b></font></h3>
@@ -10685,7 +10685,7 @@
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium">&nbsp;</td>
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
-<td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium"><font face="Arial" size="2">o_capture_reg_status_c1</font></td>
+<td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium"><font face="Arial" size="2">i_capture_reg_status_c1</font></td>
 </tr>
 <tr>
 <td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-bottom-style: none; border-bottom-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
@@ -10710,7 +10710,7 @@
 <td width="59%" align="center"><font face="Arial" size="2"><b>Description</b></font></td>
 </tr>
 <tr>
-<td width="13%"><font face="Arial" size="2">o_capture_reg_status_c1</font></td>
+<td width="13%"><font face="Arial" size="2">i_capture_reg_status_c1</font></td>
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">N/A</font></td>
 <td width="11%"><font face="Arial" size="2">read-only</font></td>
@@ -10809,7 +10809,7 @@
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">0x 0</font></td>
 <td width="11%"><font face="Arial" size="2">read-write</font></td>
-<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as o_capture_reg_status_c1.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
+<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as i_capture_reg_status_c1.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
 </table>
 <hr>
 <h3 align="left"><font size="4" face="Arial"><a name="counter_all_apb_reg_capture_reg_a0_c1"></a><b>capture_reg_a0_c1</b></font></h3>
@@ -16076,7 +16076,7 @@
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium">&nbsp;</td>
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
-<td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium"><font face="Arial" size="2">o_capture_reg_status_c2</font></td>
+<td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium"><font face="Arial" size="2">i_capture_reg_status_c2</font></td>
 </tr>
 <tr>
 <td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-bottom-style: none; border-bottom-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
@@ -16101,7 +16101,7 @@
 <td width="59%" align="center"><font face="Arial" size="2"><b>Description</b></font></td>
 </tr>
 <tr>
-<td width="13%"><font face="Arial" size="2">o_capture_reg_status_c2</font></td>
+<td width="13%"><font face="Arial" size="2">i_capture_reg_status_c2</font></td>
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">N/A</font></td>
 <td width="11%"><font face="Arial" size="2">read-only</font></td>
@@ -16200,7 +16200,7 @@
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">0x 0</font></td>
 <td width="11%"><font face="Arial" size="2">read-write</font></td>
-<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as o_capture_reg_status_c2.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
+<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as i_capture_reg_status_c2.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
 </table>
 <hr>
 <h3 align="left"><font size="4" face="Arial"><a name="counter_all_apb_reg_capture_reg_a0_c2"></a><b>capture_reg_a0_c2</b></font></h3>
@@ -21467,7 +21467,7 @@
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium">&nbsp;</td>
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
 <td width="22" align="center" style="border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
-<td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium"><font face="Arial" size="2">o_capture_reg_status_c3</font></td>
+<td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-right-style: none; border-right-width: medium; border-left-style: none; border-left-width: medium"><font face="Arial" size="2">i_capture_reg_status_c3</font></td>
 </tr>
 <tr>
 <td width="22" align="center" style="border-top-style: none; border-top-width: medium; border-bottom-style: none; border-bottom-width: medium; border-left-style: none; border-left-width: medium">&nbsp;</td>
@@ -21492,7 +21492,7 @@
 <td width="59%" align="center"><font face="Arial" size="2"><b>Description</b></font></td>
 </tr>
 <tr>
-<td width="13%"><font face="Arial" size="2">o_capture_reg_status_c3</font></td>
+<td width="13%"><font face="Arial" size="2">i_capture_reg_status_c3</font></td>
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">N/A</font></td>
 <td width="11%"><font face="Arial" size="2">read-only</font></td>
@@ -21591,7 +21591,7 @@
 <td width="7%"><font face="Arial" size="2">[5:0]</font></td>
 <td width="10%"><font face="Arial" size="2">0x 0</font></td>
 <td width="11%"><font face="Arial" size="2">read-write</font></td>
-<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as o_capture_reg_status_c3.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
+<td width="59%"><font face="Arial" size="2"><p align="left" style="margin-top: 0; margin-bottom: 0">every bit means the same as i_capture_reg_status_c3.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">1--> rewrite, o--> discard.&nbsp;</p><p align="left" style="margin-top: 0; margin-bottom: 0">&nbsp;</p></font></td></tr>
 </table>
 <hr>
 <h3 align="left"><font size="4" face="Arial"><a name="counter_all_apb_reg_capture_reg_a0_c3"></a><b>capture_reg_a0_c3</b></font></h3>
